2006-09-18 17:48  mgrimes

	* trunk/media-datetime/MANIFEST, 
	  trunk/media-datetime/MANIFEST.skip, 
	  trunk/media-datetime/Makefile.PL, trunk/media-datetime/scripts, 
	  trunk/media-datetime/scripts/media-datetime: Adding script and 
	  updating build env

2006-09-18 17:46  mgrimes

	* trunk/media-datetime/t/ex/src/exif-corrupt.jpg: Adding test file

2006-09-18 17:29  mgrimes

	* trunk/media-datetime/Build.PL, trunk/media-datetime/META.yml: 
	  Update deps.

2006-08-25 00:44  mgrimes

	* trunk/media-datetime/t/ex/src/empty.jpg, 
	  trunk/media-rodeo/t/controller_Helpers.t, 
	  trunk/media-rodeo/t/model_CDBI-Role.t, 
	  trunk/media-rodeo/t/model_CDBI-User.t, 
	  trunk/media-rodeo/t/model_CDBI-UserRole.t, 
	  trunk/media-rodeo/t/model_cdbi_role.t, 
	  trunk/media-rodeo/t/model_cdbi_user.t, 
	  trunk/media-rodeo/t/model_cdbi_userrole.t: Added new files.

2006-08-16 18:04  mgrimes

	* trunk/media-datetime/t/97-critic.t, 
	  trunk/media-datetime/t/perlcriticrc: Added perl critic tests.

2006-08-08 15:27  mgrimes

	* trunk/media-datetime/lib/Media/DateTime/JPEG.pm: Fixes to please 
	  perlcritic.

2006-07-12 17:22  mgrimes

	* trunk/media-datetime/t/10-basic.t, 
	  trunk/media-datetime/t/11-noobj.t, trunk/media-rodeo/README, 
	  trunk/media-rodeo/media_rodeo.yml, 
	  trunk/media-rodeo/script/migrate-media: More stuff

2006-07-01 00:23  mgrimes

	* trunk/media-datetime/lib/Media/DateTime.pm, 
	  trunk/media-datetime/lib/Media/DateTime/JPEG.pm, 
	  trunk/media-datetime/t/10-basic.t, 
	  trunk/media-datetime/t/11-noobj.t, 
	  trunk/media-rodeo/script/migrate-albums, 
	  trunk/media-rodeo/script/migrate-media, 
	  trunk/media-rodeo/script/msorter, 
	  trunk/media-sorter/t/10-basic.t, trunk/media-sorter/t/11-move.t: 
	  Added _local.yml support to migrate scripts.
	  Changed M::DateTime to use stat[9] - mtime
	  Fixed tests to test mtime with touch then test.
	  More error capturing in msorter

2006-06-23 16:35  mgrimes

	* trunk/media-datetime/lib/Media/DateTime.pm, 