@@ -1,3 +1,0 @@
-cpan_user mgrimes
-sf_user <none>
-release_subclass Module::Release::NIKC
