@@ -1,3 +1,10 @@
+2006-09-18 18:13  mgrimes
+
+	* trunk/media-datetime/MANIFEST, 
+	  trunk/media-datetime/MANIFEST.SKIP, 
+	  trunk/media-datetime/MANIFEST.skip: Tweaks to get the release to 
+	  work
+
 2006-09-18 17:48  mgrimes
 
 	* trunk/media-datetime/MANIFEST, 
